SessionEstablishmentRateLimiter incorrectly updates burst capacity when the rate limit is modified

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0, 8.0.20
    • Affects Version/s: None
    • Component/s: None
    • None
    • Workload Resilience
    • Fully Compatible
    • ALL
    • v8.0
    • Workload Scheduling 2025-07-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The onUpdateEstablishmentRefreshRate function multiplies the burstCapacitySecs by the refill rate, but this is actually already done within the RateLimiter::updateRateParameters method it passes that value to. As a result, the burst capacity gets set to something far larger than intended.

            Assignee:
            Patrick Freed
            Reporter:
            Patrick Freed
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: