SERVER-107098 Fix SessionEstablishmentRateLimiter burst capacity update logic (#38105)

GitOrigin-RevId: 3a2d54f9781111927a1eb0c742a256d685b0279d